tests/baselines/reference/topLevelAwaitErrors.7(module=es2022).errors.txt
tests/cases/conformance/externalModules/index.ts(2,13): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.


==== tests/cases/conformance/externalModules/index.ts (1 errors) ====
    // await disallowed in namespace import
    import * as await from "./other";
                ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    
==== tests/cases/conformance/externalModules/other.ts (0 errors) ====
    declare const _await: any;
    export { _await as await };
    